--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-	"useTabs": false,
-	"singleQuote": false,
-	"trailingComma": "none",
-	"printWidth": 100
+  "useTabs": false,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "printWidth": 100
 }
